--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "request-image-size": "^2.2.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
+    "jest": "^28.1.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
   }
