--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "got": "^12.0.4",
     "lru-cache": "^7.10.1",
     "next": "12.1.6",
+    "probe-image-size": "^7.2.3",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "uuid": "^8.3.2"
